Serilog for testing

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,30 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=motoranza.db"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Overrides": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
+    },
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
