--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,9 @@
     "axios": "^0.26.1",
     "date-fns": "^2.0.0-alpha.13",
     "final-form": "^4.20.1",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "mobx": "^5.15.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.13.1",
@@ -28,6 +31,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-final-form": "6.3.0",
+    "react-i18next": "^11.16.2",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
