--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,6 +19,7 @@
     "@types/uuid": "^8.3.0",
     "axios": "^0.26.1",
     "date-fns": "^2.0.0-alpha.13",
+    "emoji-picker-react": "^3.5.1",
     "final-form": "^4.20.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
