--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=secret; Database=motoranza"  },
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=secret; Database=motoranza" 
+  },  
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
