--- a/client-app/.env.development
+++ b/client-app/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_API_URL=http://localhost:5000/api
 REACT_APP_API_CHAT_URL=http://localhost:5000/chat
 REACT_APP_API_MESSAGE_URL=http://localhost:5000/message
+REACT_APP_API_PRESENCE_URL=http://localhost:5000/presence
