Feed Build Fixed

--- a/client-app/.env.development
+++ b/client-app/.env.development
@@ -2,5 +2,5 @@ REACT_APP_API_URL=http://localhost:5000/api
 REACT_APP_API_CHAT_URL=http://localhost:5000/chat
 REACT_APP_API_MESSAGE_URL=http://localhost:5000/message
 REACT_APP_API_PRESENCE_URL=http://localhost:5000/presence
-REACT_APP_API_FEED_URL=http://localhost:5000/feed
+REACT_APP_API_FEED_URL=http://localhost:5000/feedhub
 
